Este es el repositorio del TP final

--- a/pages/nuestros_productos.html
+++ b/pages/nuestros_productos.html
@@ -44,7 +44,7 @@
 
         <h4>NUESTROS PRODUCTOS</h4>
 
-        <div>
+        <div style="overflow: auto">
             <table>
                 <tr>
                     <th class="tituloBarra">ARANDANOS</th>
@@ -73,6 +73,7 @@
 
 
         </div>
+        <div style="overflow: auto">
         <table class="etiquetaBarra">
             <tr>
                 <th class="tipoBarra">ARANDANOS</th>
@@ -90,6 +91,7 @@
                 <td><input type="submit" value="COMPRAR"</td>
             </tr>
             </table>
+        </div>
 
             <p class="nuestrosProductos1">
                 NUESTROS PRODUCTOS SON 100% ORGANICOS
